feat: pass ME, energy through hulls FINISH